test/conformance/chainsaw/validating-policies/autogen/autogen-deployments-statefulsets/chainsaw-test.yaml
# yaml-language-server: $schema=https://raw.githubusercontent.com/kyverno/chainsaw/main/.schemas/json/test-chainsaw-v1alpha1.json
apiVersion: chainsaw.kyverno.io/v1alpha1
kind: Test
metadata:
  name: autogen-statefulsets-statefulsets
spec:
  steps:
  - name: create policy
    use:
      template: ../../../_step-templates/create-policy.yaml
      with:
        bindings:
        - name: file
          value: policy.yaml
  - name: wait-validating-policy-ready
    use:
      template: ../../../_step-templates/validating-policy-ready.yaml
      with:
        bindings:
        - name: name
          value: disallow-privilege-escalation
        - name: message
          value: ""
  - name: check autogen policy
    try:
    - assert:
        file: check-autogen.yaml
  - name: create good statefulset
    try:
    - create:
        file: good-statefulset.yaml
  - name: create bad statefulset
    try:
    - create:
        file: bad-statefulset.yaml
        expect:
          - check:
              ($error != null): true
